<resources>
    <string name="app_name">CinemaApp</string>
    <string name="up_coming_movie">Up Coming</string>
    <string name="view_all">View All</string>
    <string name="trending_movie">Trending</string>
    <string name="popular_movie">Popular</string>
    <string name="release_date">Release Date:</string>
    <string name="minutes">minutes</string>
    <string name="overview">Overview</string>
    <string name="home_page">Home Page</string>
    <string name="settings">Settings</string>
    <string name="turn_on_night_mode">Turn on night mode.</string>
    <string name="retry">Retry</string>
    <string name="the_movie_lists_could_not_be_loaded">The movie list can not be loaded</string>
    <string name="movie_categories">Categories</string>
    <string name="top_rated_movie">Top Rated</string>
    <string name="cast">Cast</string>
    <string name="similar_movie">Similar Movie</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="trailer">Trailer</string>
    <string name="skip">Skip</string>
    <string-array name="on_boarding_texts">
    <item>This application has created movie lists and details using the API of The Movie Database site. For more detailed information, you can visit The Movie Database web site.</item>
    <item>The interface of the application has been updated accordingly in order to enable users to follow the movies.</item>
    <item>You can follow the most rated, popular and trendy movies that will be published in the cinema. You can follow the movies in these categories from the menu section of the movies in your favorite categories. The trailers will be watched through the movies you have chosen.</item>
</string-array>
    <string name="app_rated_dialog">Did you like the application? Rate the application on Google Play Store</string>
    <string name="rate_dialog_negative">No</string>
    <string name="rate_dialog_possitive">Yes</string>
    <string name="unable_find_market_app">Unable to find market app</string>
    <string name="no_internet_connection">There is no internet connection.Check the internet connection.</string>
    <string name="movie_detail_page">Movie Detail Page</string>
    <string name="categories_page">Categories Page</string>
    <string name="credit">Credit</string>
    <string name="notification_name">Remind user the app</string>
    <string name="notification_title">Sinemalog Notification</string>
    <string name="notification_content">Hey Did you look at the box office movies?Click to see</string>
</resources>
