<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/destination_home"
            android:checkable="true"
            android:icon="@drawable/movie_icon"
            android:title="@string/home_page" />
        <item
            android:id="@+id/destination_trending"
            android:checkable="true"
            android:icon="@drawable/cinema_icon"
            android:title="@string/trending_movie"/>
        <item android:id="@+id/destination_popular"
            android:checkable="true"
            android:icon="@drawable/tv_icon"
            android:title="@string/popular_movie"/>
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/destination_setting"
            android:checkable="true"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings" />
    </group>
</menu>