<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movie_detail.MovieDetailFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/titleTextColor"
        android:minHeight="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_loading"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_view_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_movie_lists_could_not_be_loaded" />

                <Button
                    android:id="@+id/button_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retry" />

            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_poster"
                android:layout_width="match_parent"
                android:layout_height="400dp">
                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/title_gradient"
                    android:padding="10dp"
                    tools:text="Movie Name"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/iv_movie_poster" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <RelativeLayout
                android:id="@+id/layout_time"
                android:layout_below="@+id/layout_poster"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_movie_time"
                    android:layout_width="wrap_content"
                    android:padding="2dp"
                    tools:text="120"
                    android:drawablePadding="2dp"
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_time_lapse" />
                <TextView
                    android:textColor="@color/titleTextColor"
                    android:text="@string/minutes"
                    android:layout_marginStart="2dp"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:padding="4dp"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:layout_toRightOf="@+id/tv_movie_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/tv_movie_release_date"
                    android:text="@string/release_date"
                    android:textColor="@color/titleTextColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:paddingHorizontal="2dp"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    tools:text="12 Sept,2012"
                    android:maxLines="1"
                    android:textSize="16sp" />

            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layout_overview"
                android:layout_below="@+id/layout_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/overview"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingStart="5dp"
                    android:textColor="@color/titleTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    tools:text="Movie Description"
                    android:id="@+id/tv_movie_overview"
                    android:paddingHorizontal="4dp"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>